// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/FilePreviewModal should fall back to default preview if plugin does not need to override preview component 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Loading Image Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Loading Image Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot for external file 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Loading Image Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot when plugin overrides the preview component 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot, loaded 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Image Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot, loaded and showing footer 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Image Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot, loaded with .js file 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Code Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot, loaded with .m4a file 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Audio Video Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot, loaded with .mov file 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Audio Video Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot, loaded with footer 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Image Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot, loaded with image 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Image Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/FilePreviewModal should match snapshot, loaded with other file 1`] = `
<div>
  <div>
    <div>
      <div
        class="modal-image__wrapper"
      >
        <div
          class="file-preview-modal__main-ctr"
        >
          <div>
            <div>
              File Preview Modal Header
            </div>
          </div>
          <div
            class="file-preview-modal__content"
          >
            <div>
              Code Preview
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
